add image and add tieme

--- a/index.html
+++ b/index.html
@@ -5,10 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
+        <section class="head">
+
+            <div class="image">
+                <h4 class="title-1">Happy New Year</h4>
+                <h2 class="title-2">New Year Party Celebration</h2>
+            </div>
+
+
+
+
+        </section>
+        <section>
+            <div class="price">
+                <h2 class="price-tile">65% OFF</h2>
+                <h3 class="price-details">OUR HOLIDAY DEALS ARE BETTER</h3>
+                <h2 class="price-catagori">ALL CATEGORIES</h2>
+                <img src="New Year Photo.png" alt="new year">
+            </div>
+        </section>
+        <section class="party">
+            <div>
+                <h1 class="party-title">Welcome to midnight party</h1>
+                <h3 class="party-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </h3>
+                <button class="btn-1">JOIN NOW</button>
+            </div>
+            <div> <img src="Group 70.png" alt="group people
+            "></div>
+        </section>
+        <section class="place">
+            <div>
+                <h4 class="time"><span class="text-t">Place:</span> New Park Hotel</h4>
+                <h4 class="time"><span class="text-t"> Date:</span> 31 December Night 2023</h4>
+                <h4 class="time"><span class="text-t">Time: </span>Evening 7.30 pm to 12.30 am</h4>
+            </div>
+            <button class="btn-2">JOIN NOW</button>
+
+        </section>
 
     </header>
 </body>
