add image and hover effect

--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
             <button class="btn-2">JOIN NOW</button>
 
         </section>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+
+        <section class="gift">
+            <div>
+                <h2 class="gift-offer">THE BEST GIFTS</h2>
+                <h1 class="gift-title"> Our Awesome Portfolio</h1>
+                <p class="gift-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+
+            </div>
+            <div class="photo">
+                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 8.png" alt="">
+                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 7.png" alt="">
+                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 3.png" alt="">
+                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 4.png" alt="">
+                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 5.png" alt="">
+                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 6.png" alt="">
+            </div>
+
+        </section>
 
     </header>
 </body>
