--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 </head>
 
 <body>
@@ -32,9 +33,9 @@
         <section class="party">
             <div>
                 <h1 class="party-title">Welcome to midnight party</h1>
-                <h3 class="party-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-                    molestie malesuada. Ipsum sed
-                    sodales risus ut pellentesque vel euismod. </h3>
+                <h3 class="party-description">Here you can buy all kind of products with exclusive
+                    price.we give you our best quality product with offer. lets celebrate New year with new hope.
+                </h3>
                 <button class="btn-1">JOIN NOW</button>
             </div>
             <div> <img src="Group 70.png" alt="group people
@@ -59,9 +60,10 @@
         <section class="gift">
             <div>
                 <h2 class="gift-offer">THE BEST GIFTS</h2>
-                <h1 class="gift-title"> Our Awesome Portfolio</h1>
-                <p class="gift-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <h1 class="gift-title"> Our Awesome Products</h1>
+                <p class="gift-details">In this new event we give our best to you. all new product and offer just for
+                    you
+                    so lets happy shopping. </p>
 
             </div>
             <div class="photo">
@@ -75,7 +77,64 @@
 
         </section>
 
+
+
     </header>
+    <footer>
+        <section class="mail">
+            <div class="mail-1"> <img src="../New yaer assaiment/resources/Group 61.png" alt=""> </div>
+            <div class=" mail-title">
+                <h2>Subscribe Newsletter</h2>
+            </div>
+            <div class="mail-details">Subscribe our page so we can give you all our offer notification
+                and you can always connect with us.
+
+            </div>
+            <div class="Subscribe">
+                <form action="">
+                    <input type="email" placeholder="use@gmail.com">
+                    <input type="submit" placeholder="Subscribe">
+                </form>
+
+
+            </div>
+
+        </section>
+        <section class="last">
+            <div class="last-last">
+                <h4 class="last-location">44, Big Building Roosevelt Street
+                    Beach Gardens Florida 33410</h4>
+
+
+
+                <h4 class="last-phn">
+                    <i class="fa-solid fa-phone"></i> 0183195677<br></br>
+                    <i class="fa-solid fa-globe"></i> www.liquid.com
+
+                </h4>
+
+            </div>
+            <hr>
+            <div class="logo">
+                <img src="../New yaer assaiment/resources/Facebook.png" alt="">
+
+                <img src="../New yaer assaiment/resources/Twitter.png" alt="">
+                <img src="../New yaer assaiment/resources/Instagram.png" alt="">
+                <img src="../New yaer assaiment/resources/Linkedin.png" alt="">
+            </div>
+
+
+            <hr>
+
+            <div class="end">
+                <h3 class="end-t">2017, All Rights Reserved.</h3>
+                <button class="btn-3">Unsubscribe</button>
+            </div>
+
+        </section>
+
+
+    </footer>
 </body>
 
 </html>
