--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 
             </div>
             <div class="photo">
-                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 8.png" alt="">
-                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 7.png" alt="">
-                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 3.png" alt="">
-                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 4.png" alt="">
-                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 5.png" alt="">
-                <img class="img-all" src="../New yaer assaiment/resources/Rectangle 6.png" alt="">
+                <img class="img-all" src="Rectangle 8.png" alt="">
+                <img class="img-all" src="Rectangle 7.png" alt="">
+                <img class="img-all" src="Rectangle 3.png" alt="">
+                <img class="img-all" src="Rectangle 4.png" alt="">
+                <img class="img-all" src="Rectangle 5.png" alt="">
+                <img class="img-all" src="Rectangle 6.png" alt="">
             </div>
 
         </section>
@@ -82,7 +82,7 @@
     </header>
     <footer>
         <section class="mail">
-            <div class="mail-1"> <img src="../New yaer assaiment/resources/Group 61.png" alt=""> </div>
+            <div class="mail-1"> <img src="Group 61.png" alt=""> </div>
             <div class=" mail-title">
                 <h2>Subscribe Newsletter</h2>
             </div>
@@ -116,11 +116,11 @@
             </div>
             <hr>
             <div class="logo">
-                <img src="../New yaer assaiment/resources/Facebook.png" alt="">
+                <img src="Facebook.png" alt="">
 
-                <img src="../New yaer assaiment/resources/Twitter.png" alt="">
-                <img src="../New yaer assaiment/resources/Instagram.png" alt="">
-                <img src="../New yaer assaiment/resources/Linkedin.png" alt="">
+                <img src="Twitter.png" alt="">
+                <img src="Instagram.png" alt="">
+                <img src="Linkedin.png" alt="">
             </div>
 
 
