--- a/index.html
+++ b/index.html
@@ -42,12 +42,17 @@
             "></div>
         </section>
         <section class="place">
-            <div>
+            <div class="page-1">
                 <h4 class="time"><span class="text-t">Place:</span> New Park Hotel</h4>
                 <h4 class="time"><span class="text-t"> Date:</span> 31 December Night 2023</h4>
                 <h4 class="time"><span class="text-t">Time: </span>Evening 7.30 pm to 12.30 am</h4>
+
             </div>
-            <button class="btn-2">JOIN NOW</button>
+
+            <div class="butn">
+                <button class="btn-2">JOIN NOW</button>
+            </div>
+
 
         </section>
         <section>
